what's on - calendar (jqueryUI)

--- a/culture.html
+++ b/culture.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/642e975ea7.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>What's on | 현대카드 DIVE</title>
@@ -257,7 +259,7 @@
                             </article>
                         </div>
                         <div class="section__monthly-calendar">
-                            <h3 class="section__sub-title">2020. 07</h3>
+                            <div class="section__calendar" id="programCalendar"></div>
                         </div>
                     </div>
                     <div class="lst-tab__cnt"></div>
