what's on 지역 별 이벤트리스트

--- a/culture.html
+++ b/culture.html
@@ -137,14 +137,14 @@
             </div>
             <div class="section__top-box">
               <ul class="lst-tab culture__sort">
-                <li class="lst-tab__item culture__sort-calendar on">
+                <li class="lst-tab__item culture__sort-calendar">
                   <a href="#" class="lst-tab__item-link">
                     <i class="far fa-calendar"></i>
                     <i class="fas fa-calendar"></i>
                     <span class="lst-tab__item-txt">캘린더</span>
                   </a>
                 </li>
-                <li class="lst-tab__item culture__sort-places">
+                <li class="lst-tab__item culture__sort-places on">
                   <a href="#" class="lst-tab__item-link">
                     <i class="far fa-map"></i>
                     <i class="fas fa-map"></i>
@@ -155,7 +155,7 @@
             </div>
           </section>
           <section class="section__cnt">
-            <div class="lst-tab__cnt">
+            <div class="lst-tab__cnt lst-tab__calendar">
               <div class="section__monthly-lst">
                 <article class="monthly-lst__now">
                   <h3 class="section__sub-title">Now</h3>
@@ -298,7 +298,110 @@
                 <div class="section__calendar" id="programCalendar"></div>
               </div>
             </div>
-            <div class="lst-tab__cnt"></div>
+            <div class="lst-tab__cnt lst-tab__places">
+              <ul class="section__filter">
+                <li>
+                  <a href="#">
+                    <i class="fas fa-filter"></i>
+                    <span>전체</span>
+                  </a>
+                </li>
+                <li>
+                  <label for="reservation">예매/예약 필요</label>
+                  <input
+                    type="checkbox"
+                    id="reservation"
+                    name="reservationYn"
+                    value="N"
+                  />
+                </li>
+              </ul>
+              <article class="section__place">
+                <h3 class="section__sub-title">이태원</h3>
+                <div class="section__cnt-wrap">
+                  <a href="#" class="section__activity">
+                    <div class="section__activity-info">
+                      <div class="section__activity-img">
+                        <img src="images/main/activity7.jpg" alt="" />
+                      </div>
+                      <p class="section__activity-period">
+                        07/15(수) ~ 07/21(화)
+                      </p>
+                      <strong class="section__activity-title"
+                        >듀스 한정판 LP 리마스터링 버전</strong
+                      >
+                      <p class="section__activity-desc">Limited Vinyl Club</p>
+                      <p class="section__activity-space">
+                        바이닐앤플라스틱<span
+                          class="section__activity-reservation"
+                          >예약</span
+                        >
+                      </p>
+                    </div>
+                  </a>
+                  <a href="#" class="section__activity">
+                    <div class="section__activity-info">
+                      <div class="section__activity-img">
+                        <img src="images/main/activity6.jpg" alt="" />
+                      </div>
+                      <p class="section__activity-period">
+                        07/15(수) ~ 10/11(일)
+                      </p>
+                      <strong class="section__activity-title"
+                        >Lucky DIVE 오스제미오스 인증샷!</strong
+                      >
+                      <p class="section__activity-desc">
+                        전시 인증샷 보여주고 선물뽑자!
+                      </p>
+                      <p class="section__activity-space">
+                        스토리지
+                      </p>
+                    </div>
+                  </a>
+                  <a href="#" class="section__activity">
+                    <div class="section__activity-info">
+                      <div class="section__activity-img">
+                        <img src="images/main/activity5.jpg" alt="" />
+                      </div>
+                      <p class="section__activity-period">
+                        07/15(수) ~ 10/11(일)
+                      </p>
+                      <strong class="section__activity-title"
+                        >초현실적 환상 세계로의 초대</strong
+                      >
+                      <p class="section__activity-desc">
+                        오스제미오스 국내 최초 개인전 오픈
+                      </p>
+                      <p class="section__activity-space">
+                        스토리지<span class="section__activity-reservation"
+                          >예약</span
+                        >
+                      </p>
+                    </div>
+                  </a>
+                  <a href="#" class="section__activity">
+                    <div class="section__activity-info">
+                      <div class="section__activity-img">
+                        <img src="images/main/activity7.jpg" alt="" />
+                      </div>
+                      <p class="section__activity-period">
+                        07/15(수) ~ 07/21(화)
+                      </p>
+                      <strong class="section__activity-title"
+                        >듀스 한정판 LP 리마스터링 버전</strong
+                      >
+                      <p class="section__activity-desc">Limited Vinyl Club</p>
+                      <p class="section__activity-space">
+                        바이닐앤플라스틱<span
+                          class="section__activity-reservation"
+                          >예약</span
+                        >
+                      </p>
+                    </div>
+                  </a>
+                </div>
+              </article>
+            </div>
           </section>
         </div>
       </div>
