--- a/culture.html
+++ b/culture.html
@@ -321,9 +321,7 @@
                 <div class="section__cnt-wrap">
                   <a href="#" class="section__activity">
                     <div class="section__activity-info">
-                      <div class="section__activity-img">
-                        <img src="images/main/activity7.jpg" alt="" />
-                      </div>
+                      <img src="images/main/activity7.jpg" alt="" />
                       <p class="section__activity-period">
                         07/15(수) ~ 07/21(화)
                       </p>
@@ -341,9 +339,7 @@
                   </a>
                   <a href="#" class="section__activity">
                     <div class="section__activity-info">
-                      <div class="section__activity-img">
-                        <img src="images/main/activity6.jpg" alt="" />
-                      </div>
+                      <img src="images/main/activity6.jpg" alt="" />
                       <p class="section__activity-period">
                         07/15(수) ~ 10/11(일)
                       </p>
@@ -360,9 +356,7 @@
                   </a>
                   <a href="#" class="section__activity">
                     <div class="section__activity-info">
-                      <div class="section__activity-img">
-                        <img src="images/main/activity5.jpg" alt="" />
-                      </div>
+                      <img src="images/main/activity5.jpg" alt="" />
                       <p class="section__activity-period">
                         07/15(수) ~ 10/11(일)
                       </p>
@@ -381,9 +375,7 @@
                   </a>
                   <a href="#" class="section__activity">
                     <div class="section__activity-info">
-                      <div class="section__activity-img">
-                        <img src="images/main/activity7.jpg" alt="" />
-                      </div>
+                      <img src="images/main/activity7.jpg" alt="" />
                       <p class="section__activity-period">
                         07/15(수) ~ 07/21(화)
                       </p>
@@ -400,6 +392,174 @@
                     </div>
                   </a>
                 </div>
+                <button type="button" class="btn-more-activity">
+                  더 보기<i class="fas fa-plus"></i>
+                </button>
+              </article>
+              <article class="section__place">
+                <h3 class="section__sub-title">청담</h3>
+                <div class="section__cnt-wrap">
+                  <a href="#" class="section__activity">
+                    <div class="section__activity-info">
+                      <img src="images/main/activity9.jpg" alt="" />
+                      <p class="section__activity-period">
+                        07/24(금)
+                      </p>
+                      <strong class="section__activity-title"
+                        >낯선 곳에 나를 잠시 묶어둔 여름</strong
+                      >
+                      <p class="section__activity-desc">
+                        여름밤, 이병률 작가의 시 낭독회
+                      </p>
+                      <p class="section__activity-space">
+                        트래블 라이브러리<span
+                          class="section__activity-reservation"
+                          >예약</span
+                        >
+                      </p>
+                    </div>
+                  </a>
+                  <a href="#" class="section__activity">
+                    <div class="section__activity-info">
+                      <img src="images/main/activity8.jpg" alt="" />
+                      <p class="section__activity-period">
+                        07/16(목)
+                      </p>
+                      <strong class="section__activity-title"
+                        >위스키 끝판왕, 버번을 만나다</strong
+                      >
+                      <p class="section__activity-desc">
+                        버번 위스키 테이스팅 클래스
+                      </p>
+                      <p class="section__activity-space">
+                        쿠킹 라이브러리<span
+                          class="section__activity-reservation"
+                          >예약</span
+                        >
+                      </p>
+                    </div>
+                  </a>
+                  <a href="#" class="section__activity">
+                    <div class="section__activity-info">
+                      <img src="images/main/activity4.jpg" alt="" />
+                      <p class="section__activity-period">
+                        07/08(수)
+                      </p>
+                      <strong class="section__activity-title"
+                        >여름밤 스위스 여행</strong
+                      >
+                      <p class="section__activity-desc">
+                        스위스 전문 가이드 서찬수의 트래블 토크
+                      </p>
+                      <p class="section__activity-space">
+                        트래블 라이브러리<span
+                          class="section__activity-reservation"
+                          >예약</span
+                        >
+                      </p>
+                    </div>
+                  </a>
+                  <a href="#" class="section__activity">
+                    <div class="section__activity-info">
+                      <img src="images/main/activity3.jpg" alt="" />
+                      <p class="section__activity-period">
+                        07/04(토)
+                      </p>
+                      <strong class="section__activity-title"
+                        >시장 가는 즐거움</strong
+                      >
+                      <p class="section__activity-desc">
+                        쿠킹 라이브러리 X 마르쉐 파머스 마켓
+                      </p>
+                      <p class="section__activity-space">
+                        쿠킹 라이브러리
+                      </p>
+                    </div>
+                  </a>
+                </div>
+                <button type="button" class="btn-more-activity">
+                  더 보기<i class="fas fa-plus"></i>
+                </button>
+              </article>
+              <article class="section__place">
+                <h3 class="section__sub-title">가회</h3>
+                <div class="section__cnt-wrap">
+                  <a href="#" class="section__activity">
+                    <div class="section__activity-info">
+                      <img src="images/main/activity7.jpg" alt="" />
+                      <p class="section__activity-period">
+                        07/15(수) ~ 07/21(화)
+                      </p>
+                      <strong class="section__activity-title"
+                        >듀스 한정판 LP 리마스터링 버전</strong
+                      >
+                      <p class="section__activity-desc">Limited Vinyl Club</p>
+                      <p class="section__activity-space">
+                        바이닐앤플라스틱<span
+                          class="section__activity-reservation"
+                          >예약</span
+                        >
+                      </p>
+                    </div>
+                  </a>
+                  <a href="#" class="section__activity">
+                    <div class="section__activity-info">
+                      <img src="images/main/activity6.jpg" alt="" />
+                      <p class="section__activity-period">
+                        07/15(수) ~ 10/11(일)
+                      </p>
+                      <strong class="section__activity-title"
+                        >Lucky DIVE 오스제미오스 인증샷!</strong
+                      >
+                      <p class="section__activity-desc">
+                        전시 인증샷 보여주고 선물뽑자!
+                      </p>
+                      <p class="section__activity-space">
+                        스토리지
+                      </p>
+                    </div>
+                  </a>
+                  <a href="#" class="section__activity">
+                    <div class="section__activity-info">
+                      <img src="images/main/activity5.jpg" alt="" />
+                      <p class="section__activity-period">
+                        07/15(수) ~ 10/11(일)
+                      </p>
+                      <strong class="section__activity-title"
+                        >초현실적 환상 세계로의 초대</strong
+                      >
+                      <p class="section__activity-desc">
+                        오스제미오스 국내 최초 개인전 오픈
+                      </p>
+                      <p class="section__activity-space">
+                        스토리지<span class="section__activity-reservation"
+                          >예약</span
+                        >
+                      </p>
+                    </div>
+                  </a>
+                  <a href="#" class="section__activity">
+                    <div class="section__activity-info">
+                      <img src="images/main/activity7.jpg" alt="" />
+                      <p class="section__activity-period">
+                        07/15(수) ~ 07/21(화)
+                      </p>
+                      <strong class="section__activity-title"
+                        >듀스 한정판 LP 리마스터링 버전</strong
+                      >
+                      <p class="section__activity-desc">Limited Vinyl Club</p>
+                      <p class="section__activity-space">
+                        바이닐앤플라스틱<span
+                          class="section__activity-reservation"
+                          >예약</span
+                        >
+                      </p>
+                    </div>
+                  </a>
+                </div>
+                <button type="button" class="btn-more-activity">
+                  더 보기<i class="fas fa-plus"></i>
+                </button>
               </article>
             </div>
           </section>
