space - design library 페이지 작업시작

--- a/culture.html
+++ b/culture.html
@@ -41,7 +41,10 @@
                 </a>
                 <ul class="lst-gnb-sub">
                   <li class="lst-gnb-sub__item">
-                    <a href="#" class="lst-gnb-sub__item-link">
+                    <a
+                      href="design-library.html"
+                      class="lst-gnb-sub__item-link"
+                    >
                       <span class="lst-gnb-sub__item-txt">DESIGN LIBRARY</span>
                     </a>
                   </li>
@@ -137,14 +140,14 @@
             </div>
             <div class="section__top-box">
               <ul class="lst-tab culture__sort">
-                <li class="lst-tab__item culture__sort-calendar">
+                <li class="lst-tab__item culture__sort-calendar on">
                   <a href="#" class="lst-tab__item-link">
                     <i class="far fa-calendar"></i>
                     <i class="fas fa-calendar"></i>
                     <span class="lst-tab__item-txt">캘린더</span>
                   </a>
                 </li>
-                <li class="lst-tab__item culture__sort-places on">
+                <li class="lst-tab__item culture__sort-places">
                   <a href="#" class="lst-tab__item-link">
                     <i class="far fa-map"></i>
                     <i class="fas fa-map"></i>
