--- a/design-library.html
+++ b/design-library.html
@@ -151,7 +151,7 @@
         </div>
       </header>
 
-      <div id="container" class="design-library">
+      <div id="container" class="space-cnt design-library">
         <section class="section__top">
           <div class="inner-wrap">
             <div class="section__top-box">
@@ -177,7 +177,113 @@
           </div>
         </section>
         <div class="inner-wrap">
-          <section class="section__cnt"></section>
+          <section class="space__whats-on">
+            <div class="section__top">
+              <h3 class="section__title">What's on</h3>
+              <a href="#" class="btn-more">
+                <p>전체보기</p>
+                <img src="images/common/ico-arr-title.png" alt="바로가기" />
+              </a>
+            </div>
+            <div class="section__cnt">
+              <article class="lst__activity">
+                <div class="lst__activity-period">
+                  <a href="#" class="lst__activity-period-link">
+                    <p class="lst__activity-week">Wed</p>
+                    <p class="lst__activity-date">07.29</p>
+                  </a>
+                </div>
+                <div class="lst__activity-event">
+                  <a href="#" class="lst__activity-event-link">
+                    <div class="lst__activity-img">
+                      <img src="images/space/event5.jpg" alt="" />
+                    </div>
+                    <strong class="lst__activity-title"
+                      >올 여름 책으로 떠나는<br />가구 디자인 여행</strong
+                    >
+                    <p class="lst__activity-desc">
+                      디자인 라이브러리 '북살롱'
+                    </p>
+                    <p class="lst__activity-space">
+                      디자인 라이브러리<span class="lst__activity-reservation"
+                        >예약</span
+                      >
+                    </p>
+                  </a>
+                </div>
+              </article>
+              <article class="lst__activity">
+                <div class="lst__activity-period">
+                  <a href="#" class="lst__activity-period-link">
+                    <p class="lst__activity-week">Thu Sun</p>
+                    <p class="lst__activity-date">07.16 ~ 08.16</p>
+                  </a>
+                </div>
+                <div class="lst__activity-event">
+                  <a href="#" class="lst__activity-event-link">
+                    <div class="lst__activity-img">
+                      <img src="images/space/event4.jpg" alt="" />
+                    </div>
+                    <strong class="lst__activity-title">#애정가구챌린지</strong>
+                    <p class="lst__activity-desc">
+                      애정하는 나의 가구 자랑하기
+                    </p>
+                    <p class="lst__activity-space">
+                      디자인 라이브러리
+                    </p>
+                  </a>
+                </div>
+              </article>
+              <article class="lst__activity">
+                <div class="lst__activity-period">
+                  <a href="#" class="lst__activity-period-link">
+                    <p class="lst__activity-week">Tue Sun</p>
+                    <p class="lst__activity-date">07.07 ~ 08.30</p>
+                  </a>
+                </div>
+                <div class="lst__activity-event">
+                  <a href="#" class="lst__activity-event-link">
+                    <div class="lst__activity-img">
+                      <img src="images/space/event3.jpg" alt="" />
+                    </div>
+                    <strong class="lst__activity-title"
+                      >어디에도 없던 가구와<br />책의 만남</strong
+                    >
+                    <p class="lst__activity-desc">
+                      디자인 라이브러리 X 더콘란샵
+                    </p>
+                    <p class="lst__activity-space">
+                      디자인 라이브러리
+                    </p>
+                  </a>
+                </div>
+              </article>
+              <article class="lst__activity">
+                <div class="lst__activity-period">
+                  <a href="#" class="lst__activity-period-link">
+                    <p class="lst__activity-week">Wed Fri</p>
+                    <p class="lst__activity-date">07.01 ~ 07.31</p>
+                  </a>
+                </div>
+                <div class="lst__activity-event">
+                  <a href="#" class="lst__activity-event-link">
+                    <div class="lst__activity-img">
+                      <img src="images/space/event2.jpg" alt="" />
+                    </div>
+                    <strong class="lst__activity-title"
+                      >이 의자 누가<br />디자인했어?</strong
+                    >
+                    <p class="lst__activity-desc">
+                      7월의 디자이너 한스 웨그너
+                    </p>
+                    <p class="lst__activity-space">
+                      디자인 라이브러리
+                    </p>
+                  </a>
+                </div>
+              </article>
+            </div>
+          </section>
         </div>
       </div>
       <footer id="footer">
@@ -194,9 +300,9 @@
         <p>&copy; HYUNDAI CARD Corp.</p>
       </footer>
 
-      <a href="#header" class="btn__top"
+      <!-- <a href="#header" class="btn__top"
         ><img src="images/common/btn-top.png" alt="상단으로 이동"
-      /></a>
+      /></a> -->
     </div>
   </body>
 </html>
