design library - experience, post 작업

--- a/design-library.html
+++ b/design-library.html
@@ -284,6 +284,110 @@
               </article>
             </div>
           </section>
+          <section class="space__experience">
+            <div class="section__top">
+              <h3 class="section__title">Experience</h3>
+            </div>
+            <div class="section__cnt">
+              <article class="lst__activity">
+                <div class="lst__activity-event">
+                  <a href="#" class="lst__activity-event-link">
+                    <div class="lst__activity-img">
+                      <img src="images/space/banner-dl-cc.jpg" alt="" />
+                    </div>
+                    <strong class="lst__activity-title"
+                      >Complete Collection</strong
+                    >
+                    <p class="lst__activity-desc">
+                      디자인 라이브러리만의 특별한 전권 보유 컬렉션
+                    </p>
+                  </a>
+                </div>
+              </article>
+              <article class="lst__activity">
+                <div class="lst__activity-event">
+                  <a href="#" class="lst__activity-event-link">
+                    <div class="lst__activity-img">
+                      <img src="images/space/banner-rarebook.jpg" alt="" />
+                    </div>
+                    <strong class="lst__activity-title">Rare Book Room</strong>
+                    <p class="lst__activity-desc">
+                      이곳에서만 만날 수 있는 전세계 희귀 디자인 도서
+                    </p>
+                  </a>
+                </div>
+              </article>
+            </div>
+          </section>
+          <section class="space__post">
+            <div class="section__top">
+              <h3 class="section__title">Post</h3>
+              <a href="#" class="btn-more">
+                <p>전체보기</p>
+                <img src="images/common/ico-arr-title.png" alt="바로가기" />
+              </a>
+            </div>
+            <div class="section__cnt">
+              <article class="lst__activity">
+                <div class="lst__activity-event">
+                  <a href="#" class="lst__activity-event-link">
+                    <div class="lst__activity-img">
+                      <img src="images/space/event3.jpg" alt="" />
+                    </div>
+                    <strong class="lst__activity-title"
+                      >어디에도 없던 가구와 책의 만남</strong
+                    >
+                    <p class="lst__activity-desc">
+                      디자인 라이브러리 X 더콘란샵
+                    </p>
+                  </a>
+                </div>
+              </article>
+              <article class="lst__activity">
+                <div class="lst__activity-event">
+                  <a href="#" class="lst__activity-event-link">
+                    <div class="lst__activity-img">
+                      <img src="images/space/post2.jpg" alt="" />
+                    </div>
+                    <strong class="lst__activity-title"
+                      >어디에도 없는 책</strong
+                    >
+                    <p class="lst__activity-desc">
+                      7월의 레어북 컬렉션
+                    </p>
+                  </a>
+                </div>
+              </article>
+              <article class="lst__activity">
+                <div class="lst__activity-event">
+                  <a href="#" class="lst__activity-event-link">
+                    <div class="lst__activity-img">
+                      <img src="images/space/post1.jpg" alt="" />
+                    </div>
+                    <strong class="lst__activity-title"
+                      >극적인 로고 타이틀의 세계</strong
+                    >
+                    <p class="lst__activity-desc">
+                      DIVE와 프로파간다의 인터뷰
+                    </p>
+                  </a>
+                </div>
+              </article>
+              <article class="lst__activity">
+                <div class="lst__activity-event">
+                  <a href="#" class="lst__activity-event-link">
+                    <div class="lst__activity-img">
+                      <img src="images/space/event1.jpg" alt="" />
+                    </div>
+                    <strong class="lst__activity-title">가구예찬</strong>
+                    <p class="lst__activity-desc">
+                      Design Theme 01. 가구 디자인
+                    </p>
+                  </a>
+                </div>
+              </article>
+            </div>
+          </section>
         </div>
       </div>
       <footer id="footer">
