scroll에 따른 header border추가, main컨텐츠 변경

--- a/index.html
+++ b/index.html
@@ -177,50 +177,34 @@
               <div class="section__cnt-wrap">
                 <a href="#" class="section__activity">
                   <div class="section__activity-info">
-                    <p class="section__activity-period">07/24(금)</p>
-                    <strong class="section__activity-title">낯선 곳에<br />나를 잠시<br />묶어둔 여름</strong>
+                    <p class="section__activity-period">09/01(화) ~ 09/27(일)</p>
+                    <strong class="section__activity-title">기다리던<br>빈티지<br>가구 전시</strong>
                     <p class="section__activity-desc">
-                      여름밤, 이병률 작가의 시 낭독회
+                      디자인 라이브러리 X 원오디너리맨션
                     </p>
                     <p class="section__activity-space">
-                      트래블 라이브러리<span class="section__activity-reservation">예매</span>
+                      디자인 라이브러리
                     </p>
                   </div>
                   <div class="section__activity-img">
-                    <img src="images/main/activity9.jpg" alt="" />
-                    <span class="section__activity-location">청담</span>
+                    <img src="images/main/activity1.jpg" alt="" />
+                    <span class="section__activity-location">가회</span>
                   </div>
                 </a>
                 <a href="#" class="section__activity">
                   <div class="section__activity-info">
-                    <p class="section__activity-period">07/16(목)</p>
-                    <strong class="section__activity-title">위스키 끝파왕,<br />버번을 만나다</strong>
+                    <p class="section__activity-period">09/01(화) ~ 09/30(수)</p>
+                    <strong class="section__activity-title">매혹적인<br>향기 가득</strong>
                     <p class="section__activity-desc">
-                      버번 위스키 테이스팅 클래스
+                      Food Theme 10. Curry
                     </p>
                     <p class="section__activity-space">
-                      쿠킹 라이브러리<span class="section__activity-reservation">예약</span>
+                      쿠킹 라이브러리
                     </p>
                   </div>
                   <div class="section__activity-img">
-                    <img src="images/main/activity8.jpg" alt="" />
+                    <img src="images/main/activity2.jpg" alt="" />
                     <span class="section__activity-location">청담</span>
-                  </div>
-                </a>
-                <a href="#" class="section__activity">
-                  <div class="section__activity-info">
-                    <p class="section__activity-period">
-                      07/15(수) ~ 07/21(화)
-                    </p>
-                    <strong class="section__activity-title">듀스 한정판 LP<br />리마스터링 버전</strong>
-                    <p class="section__activity-desc">Limited Vinyl Club</p>
-                    <p class="section__activity-space">
-                      바이닐앤플라스틱<span class="section__activity-reservation">예약</span>
-                    </p>
-                  </div>
-                  <div class="section__activity-img">
-                    <img src="images/main/activity7.jpg" alt="" />
-                    <span class="section__activity-location">이태원</span>
                   </div>
                 </a>
                 <a href="#" class="section__activity">
@@ -228,23 +212,7 @@
                     <p class="section__activity-period">
                       07/15(수) ~ 10/11(일)
                     </p>
-                    <strong class="section__activity-title">Lucky DIVE<br />오스제미오스 인증샷!</strong>
-                    <p class="section__activity-desc">
-                      전시 인증샷 보여주고 선물 뽑자!
-                    </p>
-                    <p class="section__activity-space">스토리지</p>
-                  </div>
-                  <div class="section__activity-img">
-                    <img src="images/main/activity6.jpg" alt="" />
-                    <span class="section__activity-location">이태원</span>
-                  </div>
-                </a>
-                <a href="#" class="section__activity">
-                  <div class="section__activity-info">
-                    <p class="section__activity-period">
-                      07/15(수) ~ 10/11(일)
-                    </p>
-                    <strong class="section__activity-title">초현실적 환상<br />세계로의 초대</strong>
+                    <strong class="section__activity-title">초현실적 환상<br>세계로의 초대</strong>
                     <p class="section__activity-desc">
                       오스제미오스 국내 최초 개인전 오픈!
                     </p>
@@ -253,54 +221,24 @@
                     </p>
                   </div>
                   <div class="section__activity-img">
-                    <img src="images/main/activity5.jpg" alt="" />
+                    <img src="images/main/activity3.jpg" alt="" />
                     <span class="section__activity-location">이태원</span>
                   </div>
                 </a>
                 <a href="#" class="section__activity">
                   <div class="section__activity-info">
-                    <p class="section__activity-period">07/08(수)</p>
-                    <strong class="section__activity-title">여름밤<br />스위스 여행</strong>
+                    <p class="section__activity-period">
+                      07/15(수) ~ 10/11(일)
+                    </p>
+                    <strong class="section__activity-title">Lucky DIVE<br>오스제미오스<br>인증샷!</strong>
                     <p class="section__activity-desc">
-                      스위스 전문 가이드 서찬수의 트래블 토크
+                      전시 인증샷 보여주고 선물 뽑자!
                     </p>
-                    <p class="section__activity-space">
-                      트래블 라이브러리<span class="section__activity-reservation">예약</span>
-                    </p>
+                    <p class="section__activity-space">스토리지</p>
                   </div>
                   <div class="section__activity-img">
                     <img src="images/main/activity4.jpg" alt="" />
-                    <span class="section__activity-location">청담</span>
-                  </div>
-                </a>
-                <a href="#" class="section__activity">
-                  <div class="section__activity-info">
-                    <p class="section__activity-period">07/04(토)</p>
-                    <strong class="section__activity-title">시장 가는<br />즐거움</strong>
-                    <p class="section__activity-desc">
-                      쿠킹 라이브러리 X 마르쉐 파머스 마켓
-                    </p>
-                    <p class="section__activity-space">쿠킹 라이브러리</p>
-                  </div>
-                  <div class="section__activity-img">
-                    <img src="images/main/activity3.jpg" alt="" />
-                    <span class="section__activity-location">청담</span>
-                  </div>
-                </a>
-                <a href="#" class="section__activity">
-                  <div class="section__activity-info">
-                    <p class="section__activity-period">06/25(목)</p>
-                    <strong class="section__activity-title">글자에 시나리오를<br />담는<br />방법</strong>
-                    <p class="section__activity-desc">
-                      디자인 라이브러리 Talk 28. 프로파간다
-                    </p>
-                    <p class="section__activity-space">
-                      디자인 라이브러리<span class="section__activity-reservation">예약</span>
-                    </p>
-                  </div>
-                  <div class="section__activity-img">
-                    <img src="images/main/activity2.jpg" alt="" />
-                    <span class="section__activity-location">청담</span>
+                    <span class="section__activity-location">이태원</span>
                   </div>
                 </a>
               </div>
@@ -455,6 +393,22 @@
           <ul class="section__cnt">
             <li class="section__cnt-box">
               <a href="#">
+                <strong class="section__notice-title">코로나19로 인한 Space 단축 운영 안내 드립니다.</strong>
+                <p class="section__notice-desc">
+                  코로나19 확산에 따라 현대카드 Space 운영시간이 단축 되오니
+                  이용에 참고하여 주시기 바랍니다.<br />- 단축 운영 기간:
+                  2020. 08. 18(화) ~ 별도 고지 시까지<br />- 단축 운영 시간:
+                  화-일요일 12시 ~ 18시<br />- 대상 공간 : 현대카드 Space 전체
+                  공간<br />(디자인/트래블/뮤직/쿠킹 라이브러리, Understage,
+                  Vinyl & Plastic, Storage)<br />각 Space별 프로그램 진행
+                  여부는 홈페이지 또는 문의 전화를 통해 확인하여 주시기
+                  바랍니다.
+                </p>
+                <span class="section__notice-date">2020.08.18</span>
+              </a>
+            </li>
+            <li class="section__cnt-box">
+              <a href="#">
                 <strong class="section__notice-title">7월 23일 휴관 안내드립니다.</strong>
                 <p class="section__notice-desc">
                   2020. 07. 23 (목) 내부 행사 진행으로 현대카드 디자인
@@ -464,22 +418,7 @@
                 <span class="section__notice-date">2020.07.13</span>
               </a>
             </li>
-            <li class="section__cnt-box">
-              <a href="#">
-                <strong class="section__notice-title">코로나19로 인한 Space 단축 운영 안내 드립니다.</strong>
-                <p class="section__notice-desc">
-                  코로나19 확산에 따라 현대카드 Space 운영시간이 단축 되오니
-                  이용에 참고하여 주시기 바랍니다.<br />- 단축 운영 기간:
-                  2020. 05. 30(토) ~ 2020. 06. 14(일)<br />- 단축 운영 시간:
-                  화-일요일 12시 ~ 18시<br />- 대상 공간 : 현대카드 Space 전체
-                  공간<br />(디자인/트래블/뮤직/쿠킹 라이브러리, Understage,
-                  Vinyl & Plastic, Storage)<br />각 Space별 프로그램 진행
-                  여부는 홈페이지 또는 문의 전화를 통해 확인하여 주시기
-                  바랍니다.
-                </p>
-                <span class="section__notice-date">2020.06.01</span>
-              </a>
-            </li>
+
           </ul>
         </section>
       </div>
