--- a/design-library.html
+++ b/design-library.html
@@ -110,17 +110,6 @@
         <img src="images/common/ico-search-w.png" class="scroll--show" alt="검색" />
         <img src="images/common/ico-search-b.svg" alt="검색" />
       </a>
-      <div class="header__search">
-        <form>
-          <input type="text" placeholder="검색어를 입력해 주세요" />
-          <button type="button" class="btn__cancle"></button>
-          <button class="search-btn__search">
-            <img src="images/common/ico-search-b.svg" alt="검색" />
-          </button>
-        </form>
-        <p class="message__recent-search">최근 검색어 내역이 없습니다.</p>
-        <button type="button" class="btn__close"></button>
-      </div>
     </header>
 
     <div id="container" class="space-cnt design-library">
@@ -356,7 +345,59 @@
     <!-- <a href="#header" class="btn__top"
         ><img src="images/common/btn-top.png" alt="상단으로 이동"
       /></a> -->
+
+    <div class="search">
+      <div class="search__top">
+        <form>
+          <div>
+            <input type="text" placeholder="검색어를 입력해 주세요" />
+            <button type="button" class="btn__delete"><span class="blind">입력값 삭제</span></button>
+          </div>
+          <button class="search-btn__search">
+            <img src="images/common/ico-search-w.png" alt="검색" />
+          </button>
+        </form>
+        <p class="message__recent-search">최근 검색어 내역이 없습니다.</p>
+      </div>
+      <div class="search__btm">
+        <div class="search__keywords">
+          <p class="search__title">인기 검색어</p>
+          <ul class="search__cnt">
+            <li>오버 더 레코드</li>
+            <li>팬메이드라이브</li>
+            <li>이센스</li>
+            <li>DIVE크루즈</li>
+            <li>오스제미오스</li>
+            <li>글램핑</li>
+            <li>차박</li>
+            <li>쿠킹 라이브러리</li>
+            <li>래플</li>
+            <li>여행</li>
+          </ul>
+        </div>
+        <div class="search__event">
+          <p class="search__title">Event</p>
+          <ul class="search__cnt">
+            <li class="search__event-item">
+              <img src="images/common/search-event1.jpg" alt="">
+              <p>나만의 #혼플레이</p>
+            </li>
+            <li class="search__event-item">
+              <img src="images/common/search-event1.jpg" alt="">
+              <p>필카 vs 폰카</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <button type="button" class="btn__close">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="blind">검색창닫기</span>
+      </button>
+    </div>
   </div>
+
+  <script src="js/search.js"></script>
 </body>
 
 </html>
